--- a/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.scss
+++ b/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.scss
@@ -210,6 +210,9 @@
   [ng-reflect-model=true] + .filter-title p {
     color: red;
   }
+  .tgl-btn {
+    margin-bottom: 0;
+  }
 }
 .f-radio {
   .filter-text {
